<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.autem.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registering_message"
        android:id="@+id/informationTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registrationProgressBar"
        android:layout_below="@+id/informationTextView"
        android:layout_alignParentStart="true"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_token_label"
        android:id="@+id/deviceTokenTextView"
        android:layout_below="@+id/chromeTokenEditText"
         />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tokenEditText"
        android:layout_below="@+id/deviceTokenTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:inputType="text"
        android:editable="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chrome_token_label"
        android:id="@+id/chromeTokenTextView"
        android:layout_below="@+id/apiKeyEditText"
        android:layout_alignParentStart="true"
        android:editable="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chromeTokenEditText"
        android:layout_below="@+id/chromeTokenTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:inputType="text"
        android:editable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/api_label"
        android:id="@+id/apiKeyTextView"
        android:layout_below="@+id/projectNumberEditText"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/apiKeyEditText"
        android:layout_below="@+id/apiKeyTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_message_button"
        android:id="@+id/testMessageButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="#004fea"
        android:textColor="#ffffff"
        android:paddingStart="5dp"
        android:paddingEnd="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_number_label"
        android:id="@+id/projectNumber"
        android:layout_below="@+id/registrationProgressBar"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/projectNumberEditText"
        android:layout_below="@+id/projectNumber"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/apiKeyEditText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_device_button"
        android:id="@+id/registerDeviceButton"
        android:background="#004fea"
        android:textColor="#ffffff"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_alignTop="@+id/testMessageButton"
        android:layout_alignParentStart="true" />
</RelativeLayout>
